--- a/src/app.scss
+++ b/src/app.scss
@@ -25,6 +25,7 @@ h1 {
     color: $emerald;
     font-family: $header-font;
     font-size: 4rem;
+    margin: 0;
 }
 
 h2 {
@@ -86,8 +87,45 @@ form {
     }
 }
 
-.page-container {
+table {
     width: 100%;
+
+    thead {
+        th {
+            text-align: center;
+        }
+    }
+    tbody {
+        tr {
+            td {
+                text-align: center;
+
+                button {
+                    border: none;
+                    margin: 0;
+                    background-color: transparent;
+                }
+            }
+        }
+    }
+}
+
+hr {
+    width: 80%;
+    color: $emerald;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100vh;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.page-content {
+    flex-grow: 1;
 }
 
 .container {
@@ -99,6 +137,15 @@ form {
 .form-container {
     margin: 4rem auto;
     width: 250px;
+}
+
+.table-container {
+    width: 100%;
+    text-align: center;
+
+    h3 {
+        font-size: 1.5rem;
+    }
 }
 
 .nav {
@@ -115,11 +162,32 @@ form {
 
 
 .width-80 {
-    width: 80%;
+    width: 80% !important;
 }
 
 .center-text {
     text-align: center;
+}
+
+.labeled-value {
+    max-width: 500px;
+    align-items: center;
+    width: 100%;
+    margin: 1rem auto;
+
+    label {
+        font-weight: bold;
+        width: 50%;
+        display: inline-block;
+    }
+
+    p {
+        display: inline-block;
+        width: 50%;
+        text-align: left;
+        font-weight: normal;
+        margin: 0;
+    }
 }
 
 .button-link {
@@ -134,16 +202,20 @@ form {
     color: red;
 }
 
+.title-with-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    h2 {
+        flex-grow: 1;
+        margin: 0;
+    }
+}
+
 @media (max-width: $breakpoint-tablet) {
 
     #root {
-        height: 100%;
-    }
-    
-    .page-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
         height: 100%;
     }
 
