--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,12 @@ $paragraph-font: 'Crimson Pro', serif;
 $breakpoint-tablet: 768px;
 $breakpoint-phone: 500px;
 
+$phone-width: 250px;
+$desktop-width: 300px;
+
+$phone-margin: 1rem;
+$desktop-margin: 4rem;
+
 body {
     margin: 0;
     height: 100vh;
@@ -54,10 +60,13 @@ button {
 form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 200px;
+    height: 100%;
+    width: 100%;
 
     .labeled-input {
+        width: 100%;
+        margin: 1rem 0;
+
         label {
             display: block;
             margin-bottom: 8px;
@@ -66,16 +75,38 @@ form {
     
         input {
             display: block;
+            width: calc(100% - 12px);
             height: 24px;
             padding: 4px;
-            width: 238px;
             border-radius: 4px;
             border-color: $emerald;
             color: $emerald;
         }
     }
 
+    .labeled-input-checkbox {
+        margin: 1rem 0;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+    
+        input[type="checkbox"] {
+            clip: rect(0 0 0 0);
+            clip-path: inset(50%);
+            height: 1px;
+            overflow: hidden;
+            position: absolute;
+            white-space: nowrap;
+            width: 1px;
+        }
+
+    }
+
     input[type="submit"] {
+        margin: 1rem 0;
         padding: .5rem 1rem;
         width: 100%;
         color: $emerald;
@@ -129,14 +160,14 @@ hr {
 }
 
 .container {
-    margin: 4rem auto;
-    width: 250px;
+    margin: $desktop-margin auto;
+    width: $desktop-width;
 }
 
 
 .form-container {
     margin: 4rem auto;
-    width: 250px;
+    width: $desktop-width;
 }
 
 .table-container {
@@ -169,24 +200,45 @@ hr {
     text-align: center;
 }
 
-.labeled-value {
-    max-width: 500px;
-    align-items: center;
+.info-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 100%;
-    margin: 1rem auto;
+    margin: 2rem auto;
 
-    label {
-        font-weight: bold;
-        width: 50%;
-        display: inline-block;
+    .labeled-value {
+        width: 100%;
+
+        label {
+            display: inline-block;
+            width: 50%;
+            font-weight: bold;
+        }
+    
+        p {
+            display: inline-block;
+            width: 50%;
+            font-weight: normal;
+        }
     }
 
-    p {
-        display: inline-block;
-        width: 50%;
-        text-align: left;
-        font-weight: normal;
-        margin: 0;
+    .labeled-value-checkbox {
+        margin: 1rem auto;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+
+        label {
+            display: block;
+            flex-grow: 1;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
+
     }
 }
 
@@ -196,6 +248,20 @@ hr {
     padding: 0;
     border: none;
     background-color: transparent;
+}
+
+.checkbox {
+    display: inline-block; // set to `inline-block` as `inline elements ignore `height` and `width`
+    height: 20px;
+    width: 20px;
+    background: #fff;
+    border: 2px $emerald solid;
+    margin-right: 4px;
+}
+
+.checkbox--active {
+    border-color: $emerald;
+    background: $emerald;
 }
 
 .error-text {
@@ -215,55 +281,20 @@ hr {
 
 @media (max-width: $breakpoint-tablet) {
 
-    #root {
-        height: 100%;
-    }
-
     .container {
-        margin: 2rem auto;
-        width: 250px;
+        margin: $phone-margin auto;
+        width: $phone-width;
     }
 
     .form-container {
         height: 100%;
-        width: 250px;
-        margin: 2rem auto;
+        width: $phone-width;
+        margin: $phone-margin auto;
     }
+
     
-    form {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        .labeled-input {
-            label {
-                display: block;
-                margin-bottom: 8px;
-                font-weight: bold;
-            }
-        
-            input {
-                display: block;
-                height: 24px;
-                width: 238px;
-                padding: 4px;
-                border-radius: 4px;
-                border-color: $emerald;
-                color: $emerald;
-            }
-        }
-
-        input[type="submit"] {
-            flex-grow: 1;
-            padding: .5rem 1rem;
-            width: 100%;
-            color: $emerald;
-            border-color: $emerald;
-            border-radius: 1rem;
-            font-weight: bold;
-            background-color: $button-color;
-            cursor: pointer;
-        }
+    .info-container {
+        width: $phone-width;
     }
 
 }
