--- a/src/app.scss
+++ b/src/app.scss
@@ -60,7 +60,6 @@ button {
 form {
     display: flex;
     flex-direction: column;
-    height: 100%;
     width: 100%;
 
     .labeled-input {
@@ -78,6 +77,15 @@ form {
             width: calc(100% - 12px);
             height: 24px;
             padding: 4px;
+            border-radius: 4px;
+            border-color: $emerald;
+            color: $emerald;
+        }
+    
+        select {
+            display: block;
+            width: 100%;
+            height: 32px;
             border-radius: 4px;
             border-color: $emerald;
             color: $emerald;
