--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -267,40 +267,43 @@ img {
     flex-direction: column;
     width: 100%;
     margin: 2rem auto;
+}
 
-    .labeled-value {
-        width: 100%;
 
-        label {
-            display: inline-block;
-            width: 50%;
-            font-weight: bold;
-        }
-    
-        p {
-            display: inline-block;
-            width: 50%;
-            font-weight: normal;
-        }
-    }
+.labeled-value {
+    width: 100%;
+    margin: 1rem 0;
 
-    .labeled-value-checkbox {
-        margin: 1rem auto;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+    label {
+        display: inline-block;
+        width: 50%;
         font-weight: bold;
-
-        label {
-            display: block;
-            flex-grow: 1;
-            margin-bottom: 8px;
-            font-weight: bold;
-        }
-
     }
+
+    p {
+        display: inline-block;
+        width: 50%;
+        font-weight: normal;
+        margin: 0;
+    }
+}
+
+.labeled-value-checkbox {
+    margin: 1rem auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+
+    label {
+        display: block;
+        flex-grow: 1;
+        margin-bottom: 8px;
+        font-weight: bold;
+    }
+
 }
 
 .button-wrapper {
