--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -14,20 +14,15 @@ $paragraph-font: 'Spectral', serif;
 $breakpoint-tablet: 768px;
 $breakpoint-phone: 500px;
 
-$phone-width: 250px;
+$phone-width: 90%;
 $desktop-width: 400px;
 
-$phone-margin: 1rem;
+$phone-margin: 8px;
 $desktop-margin: 4rem;
 
 body {
-    margin: 0;
-    height: 100vh;
-    color: $dark-green;
-    width: 100vw;
-    background: rgb(211,211,211);
-    background: linear-gradient(180deg, $page-background-color, white 100%) fixed;
     font-family: $paragraph-font;
+    margin: 0;
 }
 
 h1 {
@@ -93,7 +88,7 @@ form {
         width: 100%;
         margin: 1rem 0;
         text-align: left;
-        
+
         label {
             display: block;
             margin-bottom: 8px;
@@ -349,7 +344,6 @@ footer {
     width: 100%;
     height: 600px;
     object-fit: cover;
-    object-position: 0 -580px;
 }
 
 
@@ -543,7 +537,57 @@ footer {
     }
 }
 
+.mobile-only {
+    display: none;
+}
+
 @media (max-width: $breakpoint-tablet) {
+
+    h1 {
+        font-size: 48px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
+    header {
+        margin: 0 8px;
+
+        .floral-header {
+            max-width: 90vw;
+            margin: 0 auto;
+            height: auto;
+        }
+    }
+
+    footer {
+    }
+
+    .page-container {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .width-50 {
+        width: 90%;
+    }
+
+    
+    .couple-pic {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+    }
+
+    .stone-tree-image {
+        max-width: 90%;
+        height: auto;
+    }
 
     .container {
         margin: $phone-margin auto;
@@ -552,6 +596,7 @@ footer {
 
     .form-container {
         height: 100%;
+        min-height: 60vh;
         width: $phone-width;
         margin: $phone-margin auto;
     }
@@ -570,6 +615,15 @@ footer {
         .nav-item {
 
         }
+    }
+
+    iframe {
+        max-width: 90%;
+        height: auto;
+    }
+
+    .mobile-only {
+        display: block;
     }
 
 }
